--- a/Projeto HTML/assets/css/fontes.css
+++ b/Projeto HTML/assets/css/fontes.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&display=swap');
+
+@font-face {
+    font-family: "valoon";
+    src: url(/valoon.ttf) format("truetype");
+}
+
 h1 {
-    font-size: 50px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 100px;
+    font-family: "Agbalumo";
 }
