--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 .todo {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background: cornflowerblue;
     height: 500px;
 }
