--- a/style.css
+++ b/style.css
@@ -1,16 +1,32 @@
+body {
+    padding: 0;
+    margin: 0;
+}
 .todo {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
     background: cornflowerblue;
-    height: 500px;
+    height: 100px;
 }
 
-.item {
-    padding: 20px;
-    background: brown;
-    color: white;
-    margin: 10px;
-    height: 20px;    
-}
+ .parte--logo {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+ }
+
+ .logo {
+    margin: 50px;
+ }
+
+ .parte--menus {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+ }
